--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==4.1.*
+Django>=4
 coverage
 tox
 -e .
@@ -6,3 +6,5 @@ pytest
 pytest-django
 pytest-xdist
 pytest-cov
+pytest-playwright
+playwright
