--- a/tests/.coveragerc
+++ b/tests/.coveragerc
@@ -1,2 +1,11 @@
+# Note that this is the coverage config for non-tox test runs.
+# tox takes its coverage config from pyproject.toml.
 [run]
-source=../src
+branch = True
+source = mizdb_tomselect
+disable_warnings = module-not-measured
+
+[paths]
+source =
+    src/
+    .tox/*/site-packages
