--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,7 @@ source = ["mizdb_tomselect"]
 
 [tool.coverage.paths]
 source = ["src", ".tox/*/site-packages"]
+
+[tool.black]
+line-length = 120
+target_version = ["py39", "py310", "py311"]
