--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,23 @@ source = ["src", ".tox/*/site-packages"]
 [tool.black]
 line-length = 120
 target_version = ["py39", "py310", "py311"]
+
+[tool.ruff]
+src = ["src"]
+target-version = "py311"
+line-length = 120
+select = [
+    "D",     # pydocstyle
+    "E",     # pycodestyle
+    "F",     # flake8
+    "I",     # isort
+]
+ignore = [
+    "D1",    # D1: Missing docstring error codes (because not every function and class has a docstring)
+    "D203",  # D203: 1 blank line required before class docstring (conflicts with D211 and should be disabled, see https://github.com/PyCQA/pydocstyle/pull/91)
+    "D205",  # D205: 1 blank line required between summary line and description
+    "D212",  # D212: Multi-line docstring summary should start at the first line
+]
+
+[tool.ruff.pydocstyle]
+convention = "google"
