Include linting in tox and make

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 env_list =
     clean
+    lint
     py{39,310,311}-django{40,41,42}
     e2e
     report
@@ -18,6 +19,14 @@ commands =
 depends =
     py39,py310,py311: clean
     report: py{39,310,311}-django{40,41,42}
+
+[testenv:lint]
+allowlist_externals = make
+commands =
+    make lint
+deps =
+    ruff
+    black
 
 [testenv:e2e]
 description= Run playwright end-to-end tests
