--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
     "tom-select": "^2.2.2"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
