Modularize javascript and bundle with esbuild

--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
+    "esbuild": "0.17.19",
     "tom-select": "^2.2.2"
   },
   "devDependencies": {
     "standard": "^17.1.0"
+  },
+  "scripts": {
+    "build": "esbuild client/mizselect.js --bundle --outfile=src/mizdb_tomselect/static/mizdb-tomselect/js/mizselect.js",
+    "lint": "standard client/"
   }
 }
