--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,12 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "mizdb-tomselect"
 version = "0.0.1"
+authors = [
+  { name="Philip Becker", email="yummytea1@gmail.com" },
+]
+description = "Django autocomplete widgets and views using TomSelect"
+readme = "README.md"
+requires-python = ">=3.9"
 
 [tool.coverage.run]
 branch = true
