Fix tests not running against multiple browsers
Overriding playwright's page fixture stops tests from being run against the specified browsers, only running against the first browser instead.

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
 description= Run playwright end-to-end tests
 commands =
     playwright install
-    pytest -m e2e -n auto tests
+    pytest -m e2e -n auto tests --browser firefox --browser chromium
 
 [testenv:report]
 deps = coverage
