--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
     "esbuild": "0.17.19",
-    "tom-select": "^2.2.2"
-  },
-  "devDependencies": {
+    "tom-select": "^2.2.2",
     "standard": "^17.1.0"
   },
   "scripts": {
