--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,15 @@ description = "Django autocomplete widgets and views using TomSelect"
 readme = "README.md"
 requires-python = ">=3.9"
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+"*" = ["*.js", "*.css"]
+
 [tool.coverage.run]
 branch = true
 source = ["mizdb_tomselect"]
