tox: specify dependencies
Pinned requirements.txt does not work well with variable dependencies for Django in tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,12 @@ deps =
     django40: Django==4.0.*
     django41: Django==4.1.*
     django42: Django==4.2.*
-    -r{toxinidir}/requirements.txt
+    coverage
+    pytest
+    pytest-django
+    pytest-xdist
+    pytest-cov
+    pytest-playwright
 commands =
     pytest tests --cov --cov-append
 depends =
@@ -29,7 +34,14 @@ deps =
     black
 
 [testenv:e2e]
-description= Run playwright end-to-end tests
+description = Run playwright end-to-end tests
+deps =
+    Django
+    pytest
+    pytest-django
+    pytest-xdist
+    pytest-cov
+    pytest-playwright
 commands =
     playwright install
     pytest -m e2e -n auto tests --browser firefox --browser chromium
