Vendor tom-select bootstrap css

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ package-dir = {"" = "src"}
 where = ["src"]
 
 [tool.setuptools.package-data]
-"*" = ["*.js", "*.css"]
+"*" = ["*.js", "*.css", "*.css.map"]
 
 [tool.coverage.run]
 branch = true
