--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "scripts": {
     "build": "esbuild client/mizselect.js --bundle --outfile=src/mizdb_tomselect/static/mizdb_tomselect/js/mizselect.js",
-    "lint": "standard client/"
+    "lint": "npx standard client/"
   }
 }
