--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ env_list =
     clean
     lint
     py{38,39,310,311}-django{40,41,42}
-    e2e
+    playwright
     report
 
 [testenv]
@@ -19,11 +19,12 @@ deps =
     pytest-xdist
     pytest-cov
     pytest-playwright
+    factory-boy
 commands =
-    pytest tests --cov --cov-append
+    pytest tests --cov --cov-append -m 'not pw'
 depends =
-    py39,py310,py311: clean
-    report: py{39,310,311}-django{40,41,42}
+    py38,py39,py310,py311: clean
+    report: py{38,39,310,311}-django{40,41,42}
 
 [testenv:lint]
 allowlist_externals = make
@@ -33,7 +34,7 @@ deps =
     ruff
     black
 
-[testenv:e2e]
+[testenv:playwright]
 description = Run playwright end-to-end tests
 deps =
     Django
@@ -42,9 +43,10 @@ deps =
     pytest-xdist
     pytest-cov
     pytest-playwright
+    factory-boy
 commands =
     playwright install
-    pytest -m e2e -n auto tests --browser firefox --browser chromium
+    pytest -m pw -n auto tests --browser firefox --browser chromium
 
 [testenv:report]
 deps = coverage
