--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,13 @@ deps =
     django40: Django==4.0.*
     django41: Django==4.1.*
     django42: Django==4.2.*
-    coverage
-    pytest
-    pytest-django
-    pytest-xdist
-    pytest-cov
-    pytest-playwright
-    factory-boy
+    coverage==7.3.1
+    pytest==7.3.1
+    pytest-django==4.5.2
+    pytest-xdist==3.3.1
+    pytest-cov==4.1.0
+    pytest-playwright==0.3.3
+    factory_boy==3.2.1
 commands =
     pytest tests --cov --cov-append -m 'not pw'
 depends =
@@ -37,13 +37,14 @@ deps =
 [testenv:playwright]
 description = Run playwright end-to-end tests
 deps =
-    Django
-    pytest
-    pytest-django
-    pytest-xdist
-    pytest-cov
-    pytest-playwright
-    factory-boy
+    Django==4.2.*
+    pytest==7.3.1
+    pytest-django==4.5.2
+    pytest-xdist==3.3.1
+    pytest-cov==4.1.0
+    playwright==1.34.0
+    pytest-playwright==0.3.3
+    factory_boy==3.2.1
 commands =
     playwright install
     pytest -m pw -n auto tests --browser firefox --browser chromium
