Update form when modifying related objects
Added popup response that updates the form when modifying related objects via the add and edit buttons.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/
-src/mizdb_tomselect/static/mizdb_tomselect/js/
+src/mizdb_tomselect/static/mizdb_tomselect/js/mizselect.js
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
