--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Django==4.2.1
-coverage==7.3.1
-tox==4.5.2
-pytest==7.3.1
-pytest-django==4.5.2
-pytest-xdist==3.3.1
-pytest-cov==4.1.0
-pytest-playwright==0.3.3
-playwright==1.34.0
-ruff==0.0.270
-build==0.10.0
-twine==4.0.2
-factory_boy==3.2.1
+Django==4.2.22
+coverage==7.9.0
+tox==4.26.0
+pytest==8.4.0
+pytest-django==4.11.1
+pytest-xdist==3.7.0
+pytest-cov==6.2.1
+pytest-playwright==0.7.0
+playwright==1.52.0
+ruff==0.11.13
+build==1.2.2.post1
+twine==6.1.0
+factory_boy==3.3.3
