Adjust ruff settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ source = ["src", ".tox/*/site-packages"]
 src = ["src"]
 target-version = "py311"
 line-length = 120
+
+[too.ruff.lint]
 select = [
     "D",        # pydocstyle
     "E", "W",   # pycodestyle
@@ -55,8 +57,8 @@ ignore = [
     "D212",  # D212: Multi-line docstring summary should start at the first line
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
-[tool.ruff.pycodestyle]
+[tool.ruff.lint.pycodestyle]
 max-doc-length = 88
