--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ allowlist_externals = make
 commands =
     make lint
 deps =
-    ruff
+    ruff==0.11.13
 
 [testenv:playwright]
 description = Run playwright end-to-end tests
