Update tox testenv dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,13 @@ deps =
     django40: Django==4.0.*
     django41: Django==4.1.*
     django42: Django==4.2.*
-    coverage==7.3.1
-    pytest==7.3.1
-    pytest-django==4.5.2
-    pytest-xdist==3.3.1
-    pytest-cov==4.1.0
-    pytest-playwright==0.3.3
-    factory_boy==3.2.1
+    coverage==7.9.0
+    pytest==8.4.0
+    pytest-django==4.11.1
+    pytest-xdist==3.7.0
+    pytest-cov==6.2.1
+    pytest-playwright==0.7.0
+    factory_boy==3.3.3
 commands =
     pytest tests --cov --cov-append -m 'not pw'
 depends =
@@ -37,26 +37,26 @@ deps =
 description = Run playwright end-to-end tests
 deps =
     Django==4.2.*
-    pytest==7.3.1
-    pytest-django==4.5.2
-    pytest-xdist==3.3.1
-    pytest-cov==4.1.0
-    playwright==1.34.0
-    pytest-playwright==0.3.3
-    factory_boy==3.2.1
+    pytest==8.4.0
+    pytest-django==4.11.1
+    pytest-xdist==3.7.0
+    pytest-cov==6.2.1
+    playwright==1.52.0
+    pytest-playwright==0.7.0
+    factory_boy==3.3.3
 commands =
     playwright install
     pytest -m pw -n auto tests --browser firefox --browser chromium
 
 [testenv:report]
-deps = coverage
+deps = coverage==7.9.0
 skip_install = True
 commands =
     -coverage report
     -coverage html
 
 [testenv:clean]
-deps = coverage
+deps = coverage==7.9.0
 skip_install = True
 commands =
     -coverage erase
