--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 env_list =
     clean
     lint
-    py{38,39,310,311}-django{40,41,42}
+    py{39,310,311}-django{40,41,42}
     playwright
     report
 
@@ -23,8 +23,8 @@ deps =
 commands =
     pytest tests --cov --cov-append -m 'not pw'
 depends =
-    py38,py39,py310,py311: clean
-    report: py{38,39,310,311}-django{40,41,42}
+    py39,py310,py311: clean
+    report: py{39,310,311}-django{40,41,42}
 
 [testenv:lint]
 allowlist_externals = make
