tox: do not run playwright tests in parallel
Hopefully this helps some with the test flakiness

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ deps =
     factory_boy==3.3.3
 commands =
     playwright install
-    pytest -m pw -n auto tests --browser firefox --browser chromium
+    pytest -m pw tests --browser firefox --browser chromium
 
 [testenv:report]
 deps = coverage==7.9.0
