tox: add test environments for Django 5

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ env_list =
     clean
     lint
     py{39,310,311,312,313}-django{42}
+    py{310,311,312,313}-django{51,52}
     playwright
     report
 
@@ -11,6 +12,8 @@ setenv =
     PYTHONWARNINGS=once::DeprecationWarning
 deps =
     django42: Django==4.2.*
+    django51: Django==5.1.*
+    django52: Django==5.2.*
     coverage==7.9.0
     pytest==8.4.0
     pytest-django==4.11.1
@@ -22,7 +25,7 @@ commands =
     pytest tests --cov --cov-append -m 'not pw'
 depends =
     py39,py310,py311,312,313: clean
-    report: py{39,310,311,312,313}-django{40,41,42}
+    report: py{39,310,311,312,313}-django{40,41,42,51,52}
 
 [testenv:lint]
 allowlist_externals = make
